# -ZQ_OPS_Brain-v2

./: .gitignore  BUILD.md  README.md  __init__.py  back_matrix.py  front_matrix.py  ibox_core.py  index.html  innm_bridge.py  package-lock.json  package.json  tailwind.config.cjs  up_matrix.py  woods_builder.py
.github/workflows/: build.yml
innm-wosds-tauri/app/: README.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/INNM_ENGINE/: back_matrix.py  front_matrix.py  ibox_core.py  up_matrix.py  woods_builder.py
src-tauri/binaries/: innm-engine
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: utils.ts
