[package]
name = "zq-ops-brain-v2"
version = "2.0.0"
description = "ZQ Ops Brain – INNM-WOSDS AI Workstation"
authors = ["ZQ Ops"]
license = "MIT"
repository = ""
default-run = "zq-ops-brain-v2"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zq_ops_brain_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-fs     = { version = "2" }
tauri-plugin-shell  = { version = "2" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
aes-gcm    = "0.10"
base64     = "0.22"
rand       = "0.8"
walkdir    = "2"
anyhow     = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { version = "2" }
